syntax = "proto3";

option go_package = ".;pb";

message HelloRequest {
  string request_text = 1;
}

message HelloResponse {
  string response_text = 1;
}

service HelloService {
  rpc Hello(HelloRequest) returns (HelloResponse);
}
